frontend/test/should_pass/exectype_IsVisited.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia && i:int=0 && x.visited[i]);
	}
}