frontend/test/should_fail/exectype_IsVisited.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=varia && i:int=0 && x.visited[i]);
	}
}